--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.25.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
+		"eslint-webpack-plugin": "^3.0.1",
 		"favicons": "^6.2.2",
 		"favicons-webpack-plugin": "^5.0.2",
 		"file-loader": "^6.2.0",
