--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@reduxjs/toolkit": "^1.6.1",
+		"antd": "^4.16.13",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.4",
@@ -27,6 +28,7 @@
 		"@babel/preset-react": "^7.14.5",
 		"autoprefixer": "^10.3.3",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-import": "^1.13.3",
 		"css-loader": "^6.2.0",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.25.1",
@@ -36,6 +38,8 @@
 		"favicons-webpack-plugin": "^5.0.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.2",
+		"less": "^4.1.1",
+		"less-loader": "^10.0.1",
 		"postcss": "^8.3.6",
 		"postcss-cli": "^8.3.1",
 		"style-loader": "^3.2.1",
