--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
 		"babel-loader": "^8.2.2",
 		"babel-plugin-import": "^1.13.3",
 		"css-loader": "^6.2.0",
+		"dotenv-webpack": "^7.0.3",
 		"eslint": "^7.32.0",
 		"eslint-plugin-react": "^7.25.1",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"eslint-webpack-plugin": "^3.0.1",
-		"favicons": "^6.2.2",
-		"favicons-webpack-plugin": "^5.0.2",
+		"favicons": "^4.8.2",
+		"favicons-webpack-plugin": "^0.0.7",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.3.2",
 		"less": "^4.1.1",
