--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.4",
-		"redux": "^4.1.1"
+		"react-router-dom": "^5.2.1",
+		"redux": "^4.1.1",
+		"redux-micro-frontend": "^1.1.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.14.8",
